Add game mode configuration options and update permission checks

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -9,15 +9,20 @@
       "player1",
       "player2"
     ],
-    "enableMessage": "スペクテイターモードが有効になりました",
-    "disableMessage": "スペクテイターモードが無効になりました",
+    "BeforeDeathGameMode":[
+      "survival",
+      "adventure"
+    ],
+    "AfterDeathGameMode": "spectator",
+    "enableMessage": "enabled deathmode",
+    "disableMessage": "disabled deathmode",
     "deathLogging": true,
     "autoDeathmodeOnDeath": false
   },
   "messages": {
-    "noPermission": "このコマンドを実行する権限がありません",
-    "playerOnly": "このコマンドはプレイヤーのみ実行できます",
-    "usage": "使用方法: /deathmode <enable|disable|config> [edit|add|remove <キー> <値>]"
+    "noPermission": "Permission denied",
+    "playerOnly": "Player only command",
+    "usage": "Usage: /deathmode <enable|disable|config> [edit|add|remove <key> <value>]"
   },
   "debug": false
 }
